--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-assignment_3/task2a/bin/
-assignment_3/task2a/obj/
-assignment_3/task2c/bin/
-assignment_3/task2c/obj/
+assignment_3/code/A3_2/task2a/bin/
+assignment_3/code/A3_2/task2a/obj/
+assignment_3/code/A3_2/task2c/bin/
+assignment_3/code/A3_2/task2c/obj/
+assignment_3/test_folder/test/bin/
+assignment_3/test_folder/test/obj/
+assignment_3/cs_project/project/A3.2.3/bin/
+assignment_3/cs_project/project/A3.2.3/obj/
 *.csproj
 .fake
